# melodm

./: README.md  pyproject.toml
src/melodm/: __init__.py  exceptions.py
src/melodm/database/: __init__.py  manager.py  setup.py
src/melodm/setup/: __init__.py  setup.py
src/melodm/types/: __init__.py  configuration.py  document.py  object_id.py
tests/: test.py
