[project]
name = "melodm"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "melikuomer", email = "73441624+melikuomer@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "pydantic>=2.11.5",
    "pymongo>=4.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
